# job-apps

./: .dockerignore  Makefile  README.md  TODO  docker-compose.dev.yml  docker-compose.prod.yml
backend/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  go.mod  main.py  pyproject.toml  requirements.txt  scheduler.go
backend/alembic/: env.py
backend/alembic/versions/: 492998d32864_update.py  7d53e04d117f_update.py  839479daf8f5_update.py  894818daa63f_update.py  ac5cd6f003c3_update.py  cb9514f1c322_update.py  ce99548b1099_create_tables.py  d5d3dc44946d_added_claims.py  fee4372b6d1f_update.py
backend/app/: dependencies.py  main.py
backend/app/core/: jobs.py  llm.py  utils.py
backend/app/database/: crud.py  models.py  session.py
backend/app/db/: models.py
backend/app/routers/: README.md  applications.py  bulk.py  data.py  frontend.py  jobs.py  users.py
backend/app/schemas/: api.py  definitions.py
backend/app/scrapers/: scraper.py
backend/app/worker/: tasks.py
backend/db/: crud.py  database.py  models.py  utils.py
backend/migrations/: env.py
backend/migrations/versions/: 2bd9fa7ff371_update.py  31371488829d_update.py  4bcd95243d53_refactored_db.py  65cabdfea9ca_removed_form_foreign_key_from_.py  7d53e04d117f_update.py  839479daf8f5_update.py  894818daa63f_update.py  8fa3b08c7b29_update.py  ac5cd6f003c3_update.py  cb9514f1c322_update.py  ceb06033ceb9_update.py  d47fc60ea65f_make_claims_non_nullable.py  d5d3dc44946d_added_claims.py  d710a8134fb6_.py  fccede04ce80_update.py  fee4372b6d1f_update.py
backend/scheduler/: .gitignore  Dockerfile  Makefile  scheduler.go
backend/scrapers/: scraper.py
backend/scrapers/sites/: __init__.py  ashby.py  linkedin.py
backend/src/: apply.py  definitions.py  errors.py  jobs.py  llm.py  main.py  utils.py
backend/worker/: tasks.py
(+137 files in other folders)
